Implemented coroutines for async operations

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -109,6 +109,7 @@
             tools:text="Cast" />
 
         <androidx.recyclerview.widget.RecyclerView
+
             android:id="@+id/RecyclerView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -120,6 +121,18 @@
             app:layout_constraintTop_toBottomOf="@+id/Cast"
             tools:listitem="@layout/cast"
             app:spanCount="1" />
+
+        <android.widget.ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="384dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/movieTitle" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
